rabbitmq/rabbit-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: openshift-rabbitmq
  name: openshift-rabbitmq
spec:
  replicas: 1
  selector:
    app: openshift-rabbitmq
    deploymentconfig: openshift-rabbitmq
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: openshift-rabbitmq
        deploymentconfig: openshift-rabbitmq
    spec:
      containers:
        - image: >-
            luiscoms/openshift-rabbitmq:3.6.5-management
          imagePullPolicy: IfNotPresent
          name: openshift-rabbitmq
          ports:
            - containerPort: 4369
              protocol: TCP
            - containerPort: 5671
              protocol: TCP
            - containerPort: 5672
              protocol: TCP
            - containerPort: 25672
              protocol: TCP
            - containerPort: 15671
              protocol: TCP
            - containerPort: 15672
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/lib/rabbitmq/
              name: openshift-rabbitmq-1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: openshift-rabbitmq-1
  test: false
status: {}
