rabbitmq/__rabbit-template.yaml

kind: Template
metadata:
  name: rabbit-template
  annotations:
    description: "RabbitMQ teszt"
labels:
  template: "rabbit-Template"
  template-version: "1.0.0"
objects:
  ##############################################################################################################################
  # RABBITMQ Service config                                                                                                    #
  ##############################################################################################################################
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: openshift-rabbitmq
    name: openshift-rabbitmq
  spec:
    clusterIP: 172.30.212.142
    ports:
      - name: 4369-tcp
        port: 4369
        protocol: TCP
        targetPort: 4369
      - name: 5671-tcp
        port: 5671
        protocol: TCP
        targetPort: 5671
      - name: 5672-tcp
        port: 5672
        protocol: TCP
        targetPort: 5672
      - name: 25672-tcp
        port: 25672
        protocol: TCP
        targetPort: 25672
    selector:
      deploymentconfig: openshift-rabbitmq
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
  ##############################################################################################################################
  # RABBITMQ Deployment config                                                                                                 #
  ##############################################################################################################################
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: openshift-rabbitmq
    name: openshift-rabbitmq
  spec:
    replicas: 1
    selector:
      app: openshift-rabbitmq
      deploymentconfig: openshift-rabbitmq
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: openshift-rabbitmq
          deploymentconfig: openshift-rabbitmq
      spec:
        containers:
          - image: >-
              luiscoms/openshift-rabbitmq@sha256:86c8bbb314be4b45dcc199d21c412ed7d527c317f3d8ca97434a5fb36a15fc2b
            imagePullPolicy: IfNotPresent
            name: openshift-rabbitmq
            ports:
              - containerPort: 4369
                protocol: TCP
              - containerPort: 5671
                protocol: TCP
              - containerPort: 5672
                protocol: TCP
              - containerPort: 25672
                protocol: TCP
            resources: {}
            terminationMessagePath: /dev/termination-log
            terminationMessagePolicy: File
            volumeMounts:
              - mountPath: /var/lib/rabbitmq/
                name: openshift-rabbitmq-1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
          - emptyDir: {}
            name: openshift-rabbitmq-1
    test: false
    triggers:
      - type: ConfigChange
      - imageChangeParams:
          automatic: false
          containerNames:
            - openshift-rabbitmq
          from:
            kind: ImageStreamTag
            name: 'openshift-rabbitmq:3'
            namespace: rabbit-tmp
        type: ImageChange
  status: {}
