rabbitmq/rabbit-svc-sidecar-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openshift-rabbitmq-metrics-nodeport
  name: openshift-rabbitmq-metrics-nodeport
spec:
  ports:
    - port: 5672
      nodePort: 30672
  selector:
    deploymentconfig: openshift-rabbitmq-metrics
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
