rabbitmq/rabbit-svc-sidecar.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openshift-rabbitmq-metrics
  name: openshift-rabbitmq-metrics
spec:
  clusterIP: 172.30.212.142
  ports:
    - name: discovery
      port: 4369
      protocol: TCP
      targetPort: 4369
    - name: service-2
      port: 5671
      protocol: TCP
      targetPort: 5671
    - name: service
      port: 5672
      protocol: TCP
      targetPort: 5672
    - name: distserver
      port: 25672
      protocol: TCP
      targetPort: 25672
    - name: admin-ssl
      port: 15671
      protocol: TCP
      targetPort: 15671
    - name: admin
      port: 15672
      protocol: TCP
      targetPort: 15672
    - name: metrics
      port: 9090 #9419
      protocol: TCP
      targetPort: 9090 #9419
  selector:
    deploymentconfig: openshift-rabbitmq-metrics
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
