rabbitmq/rabbit-route-sidecar.yaml
apiVersion: v1
kind: Route
metadata:
  name: openshift-rabbitmq-metrics
  labels:
    app: openshift-rabbitmq-metrics
spec:
  host: openshift-rabbitmq-rabbit-metrics.192.168.99.103.nip.io
  port:
    targetPort: metrics
  to:
    kind: Service
    name: openshift-rabbitmq-metrics
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: '2019-04-03T15:12:12Z'
          status: 'True'
          type: Admitted
      host: openshift-rabbitmq-rabbit-metrics.192.168.99.103.nip.io
      routerName: router
      wildcardPolicy: None
